infrastructure/cdk.out/LocalStack.template.json
{
 "Resources": {
  "PatientManagementVpcF1F9209A": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "PatientManagementVpc"
     }
    ]
   }
  },
  "PatientManagementVpcPublicSubnet1Subnet32B9FD34": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPublicSubnet1RouteTableA6B004E5": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVpc/PublicSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPublicSubnet1RouteTableAssociationB803908F": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVpcPublicSubnet1RouteTableA6B004E5"
    },
    "SubnetId": {
     "Ref": "PatientManagementVpcPublicSubnet1Subnet32B9FD34"
    }
   }
  },
  "PatientManagementVpcPublicSubnet1DefaultRouteCC8B87E7": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientManagementVpcIGW6E5E564D"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVpcPublicSubnet1RouteTableA6B004E5"
    }
   },
   "DependsOn": [
    "PatientManagementVpcVPCGW05B0D621"
   ]
  },
  "PatientManagementVpcPublicSubnet1EIP57CBC205": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVpc/PublicSubnet1"
     }
    ]
   }
  },
  "PatientManagementVpcPublicSubnet1NATGatewayB6BB180F": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientManagementVpcPublicSubnet1EIP57CBC205",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientManagementVpcPublicSubnet1Subnet32B9FD34"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVpc/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "PatientManagementVpcPublicSubnet1DefaultRouteCC8B87E7",
    "PatientManagementVpcPublicSubnet1RouteTableAssociationB803908F"
   ]
  },
  "PatientManagementVpcPublicSubnet2Subnet301A18D3": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPublicSubnet2RouteTable8FB51550": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVpc/PublicSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPublicSubnet2RouteTableAssociationC6F51BA2": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVpcPublicSubnet2RouteTable8FB51550"
    },
    "SubnetId": {
     "Ref": "PatientManagementVpcPublicSubnet2Subnet301A18D3"
    }
   }
  },
  "PatientManagementVpcPublicSubnet2DefaultRoute0DC44EBB": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "PatientManagementVpcIGW6E5E564D"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVpcPublicSubnet2RouteTable8FB51550"
    }
   },
   "DependsOn": [
    "PatientManagementVpcVPCGW05B0D621"
   ]
  },
  "PatientManagementVpcPublicSubnet2EIP7F7E2B9F": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVpc/PublicSubnet2"
     }
    ]
   }
  },
  "PatientManagementVpcPublicSubnet2NATGatewayEFB106BB": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "AllocationId": {
     "Fn::GetAtt": [
      "PatientManagementVpcPublicSubnet2EIP7F7E2B9F",
      "AllocationId"
     ]
    },
    "SubnetId": {
     "Ref": "PatientManagementVpcPublicSubnet2Subnet301A18D3"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVpc/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "PatientManagementVpcPublicSubnet2DefaultRoute0DC44EBB",
    "PatientManagementVpcPublicSubnet2RouteTableAssociationC6F51BA2"
   ]
  },
  "PatientManagementVpcPrivateSubnet1SubnetBDF7E702": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet1RouteTableEE52EACD": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVpc/PrivateSubnet1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet1RouteTableAssociation4B6E1CD5": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVpcPrivateSubnet1RouteTableEE52EACD"
    },
    "SubnetId": {
     "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet1DefaultRouteFABE5400": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientManagementVpcPublicSubnet1NATGatewayB6BB180F"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVpcPrivateSubnet1RouteTableEE52EACD"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet2RouteTable24A9ED13": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "LocalStack/PatientManagementVpc/PrivateSubnet2"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet2RouteTableAssociation1AA2E279": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "PatientManagementVpcPrivateSubnet2RouteTable24A9ED13"
    },
    "SubnetId": {
     "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
    }
   }
  },
  "PatientManagementVpcPrivateSubnet2DefaultRouteB1A67D2B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "PatientManagementVpcPublicSubnet2NATGatewayEFB106BB"
    },
    "RouteTableId": {
     "Ref": "PatientManagementVpcPrivateSubnet2RouteTable24A9ED13"
    }
   }
  },
  "PatientManagementVpcIGW6E5E564D": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "PatientManagementVpc"
     }
    ]
   }
  },
  "PatientManagementVpcVPCGW05B0D621": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "InternetGatewayId": {
     "Ref": "PatientManagementVpcIGW6E5E564D"
    },
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "AuthServiceDbSubnetGroup12237DD0": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for AuthServiceDb database",
    "SubnetIds": [
     {
      "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
     },
     {
      "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
     }
    ]
   }
  },
  "AuthServiceDbSecurityGroup4A0F0427": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for AuthServiceDb database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "LocalStackAuthServiceDbSecretF3179BFF3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDbSecretAttachment4C4A1911": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "LocalStackAuthServiceDbSecretF3179BFF3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "AuthServiceDb4EA10E77"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "AuthServiceDb4EA10E77": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "authdb",
    "DBSubnetGroupName": {
     "Ref": "AuthServiceDbSubnetGroup12237DD0"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "LocalStackAuthServiceDbSecretF3179BFF3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "AuthServiceDbSecurityGroup4A0F0427",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PatientServiceDbSubnetGroup1312FFB6": {
   "Type": "AWS::RDS::DBSubnetGroup",
   "Properties": {
    "DBSubnetGroupDescription": "Subnet group for PatientServiceDb database",
    "SubnetIds": [
     {
      "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
     },
     {
      "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
     }
    ]
   }
  },
  "PatientServiceDbSecurityGroupCEB42CD9": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Security group for PatientServiceDb database",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "LocalStackPatientServiceDbSecretFF22185F3fdaad7efa858a3daf9490cf0a702aeb": {
   "Type": "AWS::SecretsManager::Secret",
   "Properties": {
    "Description": {
     "Fn::Join": [
      "",
      [
       "Generated by the CDK for stack: ",
       {
        "Ref": "AWS::StackName"
       }
      ]
     ]
    },
    "GenerateSecretString": {
     "ExcludeCharacters": " %+~`#$&*()|[]{}:;<>?!'/@\"\\",
     "GenerateStringKey": "password",
     "PasswordLength": 30,
     "SecretStringTemplate": "{\"username\":\"admin\"}"
    }
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PatientServiceDbSecretAttachment54460532": {
   "Type": "AWS::SecretsManager::SecretTargetAttachment",
   "Properties": {
    "SecretId": {
     "Ref": "LocalStackPatientServiceDbSecretFF22185F3fdaad7efa858a3daf9490cf0a702aeb"
    },
    "TargetId": {
     "Ref": "PatientServiceDb4C436D31"
    },
    "TargetType": "AWS::RDS::DBInstance"
   }
  },
  "PatientServiceDb4C436D31": {
   "Type": "AWS::RDS::DBInstance",
   "Properties": {
    "AllocatedStorage": "20",
    "CopyTagsToSnapshot": true,
    "DBInstanceClass": "db.t2.micro",
    "DBName": "patientdb",
    "DBSubnetGroupName": {
     "Ref": "PatientServiceDbSubnetGroup1312FFB6"
    },
    "Engine": "postgres",
    "EngineVersion": "17.2",
    "MasterUserPassword": {
     "Fn::Join": [
      "",
      [
       "{{resolve:secretsmanager:",
       {
        "Ref": "LocalStackPatientServiceDbSecretFF22185F3fdaad7efa858a3daf9490cf0a702aeb"
       },
       ":SecretString:password::}}"
      ]
     ]
    },
    "MasterUsername": "admin",
    "StorageType": "gp2",
    "VPCSecurityGroups": [
     {
      "Fn::GetAtt": [
       "PatientServiceDbSecurityGroupCEB42CD9",
       "GroupId"
      ]
     }
    ]
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthServiceDbHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "AuthServiceDb4EA10E77",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "AuthServiceDb4EA10E77",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "PatientServiceDbHealthCheck": {
   "Type": "AWS::Route53::HealthCheck",
   "Properties": {
    "HealthCheckConfig": {
     "FailureThreshold": 3,
     "IPAddress": {
      "Fn::GetAtt": [
       "PatientServiceDb4C436D31",
       "Endpoint.Address"
      ]
     },
     "Port": {
      "Fn::GetAtt": [
       "PatientServiceDb4C436D31",
       "Endpoint.Port"
      ]
     },
     "RequestInterval": 30,
     "Type": "TCP"
    }
   }
  },
  "MskCluster": {
   "Type": "AWS::MSK::Cluster",
   "Properties": {
    "BrokerNodeGroupInfo": {
     "BrokerAZDistribution": "DEFAULT",
     "ClientSubnets": [
      {
       "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
      },
      {
       "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
      }
     ],
     "InstanceType": "kafka.m5.xlarge"
    },
    "ClusterName": "kafka-cluster",
    "KafkaVersion": "2.8.1",
    "NumberOfBrokerNodes": 1
   }
  },
  "PatientManagementEcsCluster3407F30E": {
   "Type": "AWS::ECS::Cluster"
  },
  "PatientManagementEcsClusterDefaultServiceDiscoveryNamespace72B23AB9": {
   "Type": "AWS::ServiceDiscovery::PrivateDnsNamespace",
   "Properties": {
    "Name": "patient-management.local",
    "Vpc": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "AuthServicetaskTaskRoleF454FE6D": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "AuthServicetask16B9A5B7": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_SQL_INIT_MODE",
        "Value": "always"
       },
       {
        "Name": "JWT_SECRET",
        "Value": "p9J2R0aVxM7wLZ5Q9C4mXk8T0vFJwZ1bYcR2nH3E5sA="
       },
       {
        "Name": "SPRING_DATASOURCE_URL",
        "Value": {
         "Fn::Join": [
          "",
          [
           "jdbc:postgresql://",
           {
            "Fn::GetAtt": [
             "AuthServiceDb4EA10E77",
             "Endpoint.Address"
            ]
           },
           ":",
           {
            "Fn::GetAtt": [
             "AuthServiceDb4EA10E77",
             "Endpoint.Port"
            ]
           },
           "/auth-service-db"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_DATASOURCE_PASSWORD",
        "Value": {
         "Fn::Join": [
          "",
          [
           "{{resolve:secretsmanager:",
           {
            "Ref": "AuthServiceDbSecretAttachment4C4A1911"
           },
           ":SecretString:password::}}"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_JPA_HIBERNATE_DDL_AUTO",
        "Value": "update"
       },
       {
        "Name": "SPRING_DATASOURCE_HIKARI_INITIALIZATION_FAIL_TIMEOUT",
        "Value": "60000"
       },
       {
        "Name": "SPRING_DATASOURCE_USERNAME",
        "Value": "admin"
       },
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       }
      ],
      "Essential": true,
      "Image": "auth-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "AuthServiceLogGroup34125B38"
        },
        "awslogs-stream-prefix": "auth-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "auth-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4005,
        "HostPort": 4005,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "AuthServicetaskExecutionRole20E0C2C2",
      "Arn"
     ]
    },
    "Family": "LocalStackAuthServicetask57A6F8DF",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "AuthServicetaskTaskRoleF454FE6D",
      "Arn"
     ]
    }
   }
  },
  "AuthServicetaskExecutionRole20E0C2C2": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "AuthServicetaskExecutionRoleDefaultPolicy83BD75DA": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "AuthServiceLogGroup34125B38",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "AuthServicetaskExecutionRoleDefaultPolicy83BD75DA",
    "Roles": [
     {
      "Ref": "AuthServicetaskExecutionRole20E0C2C2"
     }
    ]
   }
  },
  "AuthServiceLogGroup34125B38": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/auth-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AuthService3C2B741A": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "PatientManagementEcsCluster3407F30E"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "AuthServiceSecurityGroup67F2FA7D",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
       },
       {
        "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "AuthServicetask16B9A5B7"
    }
   },
   "DependsOn": [
    "AuthServiceDb4EA10E77",
    "AuthServiceDbSecretAttachment4C4A1911",
    "LocalStackAuthServiceDbSecretF3179BFF3fdaad7efa858a3daf9490cf0a702aeb",
    "AuthServiceDbSecurityGroup4A0F0427",
    "AuthServiceDbSubnetGroup12237DD0",
    "AuthServiceDbHealthCheck",
    "AuthServicetaskTaskRoleF454FE6D"
   ]
  },
  "AuthServiceSecurityGroup67F2FA7D": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "LocalStack/AuthService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   },
   "DependsOn": [
    "AuthServiceDb4EA10E77",
    "AuthServiceDbSecretAttachment4C4A1911",
    "LocalStackAuthServiceDbSecretF3179BFF3fdaad7efa858a3daf9490cf0a702aeb",
    "AuthServiceDbSecurityGroup4A0F0427",
    "AuthServiceDbSubnetGroup12237DD0",
    "AuthServiceDbHealthCheck",
    "AuthServicetaskTaskRoleF454FE6D"
   ]
  },
  "BillingServicetaskTaskRole20EE1D00": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "BillingServicetask8FA06A09": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       }
      ],
      "Essential": true,
      "Image": "billing-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "BillingServiceLogGroupDD61E740"
        },
        "awslogs-stream-prefix": "billing-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "billing-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4001,
        "HostPort": 4001,
        "Protocol": "tcp"
       },
       {
        "ContainerPort": 9001,
        "HostPort": 9001,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "BillingServicetaskExecutionRoleE8B84325",
      "Arn"
     ]
    },
    "Family": "LocalStackBillingServicetask9C4CC8C4",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "BillingServicetaskTaskRole20EE1D00",
      "Arn"
     ]
    }
   }
  },
  "BillingServicetaskExecutionRoleE8B84325": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "BillingServicetaskExecutionRoleDefaultPolicyBBCCD9B0": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "BillingServiceLogGroupDD61E740",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "BillingServicetaskExecutionRoleDefaultPolicyBBCCD9B0",
    "Roles": [
     {
      "Ref": "BillingServicetaskExecutionRoleE8B84325"
     }
    ]
   }
  },
  "BillingServiceLogGroupDD61E740": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/billing-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "BillingServiceFEB36D90": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "PatientManagementEcsCluster3407F30E"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "BillingServiceSecurityGroup3783AD35",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
       },
       {
        "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "BillingServicetask8FA06A09"
    }
   },
   "DependsOn": [
    "BillingServicetaskTaskRole20EE1D00"
   ]
  },
  "BillingServiceSecurityGroup3783AD35": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "LocalStack/BillingService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   },
   "DependsOn": [
    "BillingServicetaskTaskRole20EE1D00"
   ]
  },
  "AnalyticsServicetaskTaskRoleEC257E32": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "AnalyticsServicetask6D768F14": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       }
      ],
      "Essential": true,
      "Image": "analytics-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "AnalyticsServiceLogGroupBD82F12A"
        },
        "awslogs-stream-prefix": "analytics-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "analytics-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4002,
        "HostPort": 4002,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "AnalyticsServicetaskExecutionRole6014155A",
      "Arn"
     ]
    },
    "Family": "LocalStackAnalyticsServicetask9672574C",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "AnalyticsServicetaskTaskRoleEC257E32",
      "Arn"
     ]
    }
   }
  },
  "AnalyticsServicetaskExecutionRole6014155A": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "AnalyticsServicetaskExecutionRoleDefaultPolicy05BC14FF": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "AnalyticsServiceLogGroupBD82F12A",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "AnalyticsServicetaskExecutionRoleDefaultPolicy05BC14FF",
    "Roles": [
     {
      "Ref": "AnalyticsServicetaskExecutionRole6014155A"
     }
    ]
   }
  },
  "AnalyticsServiceLogGroupBD82F12A": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/analytics-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "AnalyticsServiceCD38C492": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "PatientManagementEcsCluster3407F30E"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "AnalyticsServiceSecurityGroupBA6AE98A",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
       },
       {
        "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "AnalyticsServicetask6D768F14"
    }
   },
   "DependsOn": [
    "AnalyticsServicetaskTaskRoleEC257E32",
    "MskCluster"
   ]
  },
  "AnalyticsServiceSecurityGroupBA6AE98A": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "LocalStack/AnalyticsService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   },
   "DependsOn": [
    "AnalyticsServicetaskTaskRoleEC257E32",
    "MskCluster"
   ]
  },
  "PatientServicetaskTaskRole034A56CF": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "PatientServicetaskFC8D0A76": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "BILLING_SERVICE_GRPC_PORT",
        "Value": "9001"
       },
       {
        "Name": "SPRING_SQL_INIT_MODE",
        "Value": "always"
       },
       {
        "Name": "SPRING_DATASOURCE_URL",
        "Value": {
         "Fn::Join": [
          "",
          [
           "jdbc:postgresql://",
           {
            "Fn::GetAtt": [
             "PatientServiceDb4C436D31",
             "Endpoint.Address"
            ]
           },
           ":",
           {
            "Fn::GetAtt": [
             "PatientServiceDb4C436D31",
             "Endpoint.Port"
            ]
           },
           "/patient-service-db"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_DATASOURCE_PASSWORD",
        "Value": {
         "Fn::Join": [
          "",
          [
           "{{resolve:secretsmanager:",
           {
            "Ref": "PatientServiceDbSecretAttachment54460532"
           },
           ":SecretString:password::}}"
          ]
         ]
        }
       },
       {
        "Name": "SPRING_JPA_HIBERNATE_DDL_AUTO",
        "Value": "update"
       },
       {
        "Name": "SPRING_DATASOURCE_HIKARI_INITIALIZATION_FAIL_TIMEOUT",
        "Value": "60000"
       },
       {
        "Name": "SPRING_DATASOURCE_USERNAME",
        "Value": "admin"
       },
       {
        "Name": "SPRING_KAFKA_BOOTSTRAP_SERVERS",
        "Value": "localhost.localstack.cloud:4510, localhost.localstack.cloud:4511, localhost.localstack.cloud:4512"
       },
       {
        "Name": "BILLING_SERVICE_ADDRESS",
        "Value": "host.docker.internal"
       }
      ],
      "Essential": true,
      "Image": "patient-service",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "PatientServiceLogGroup4A5C3809"
        },
        "awslogs-stream-prefix": "patient-service",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "patient-serviceContainer",
      "PortMappings": [
       {
        "ContainerPort": 4000,
        "HostPort": 4000,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "PatientServicetaskExecutionRoleB80AF060",
      "Arn"
     ]
    },
    "Family": "LocalStackPatientServicetaskB7631497",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "PatientServicetaskTaskRole034A56CF",
      "Arn"
     ]
    }
   }
  },
  "PatientServicetaskExecutionRoleB80AF060": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "PatientServicetaskExecutionRoleDefaultPolicy5F0007CC": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "PatientServiceLogGroup4A5C3809",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "PatientServicetaskExecutionRoleDefaultPolicy5F0007CC",
    "Roles": [
     {
      "Ref": "PatientServicetaskExecutionRoleB80AF060"
     }
    ]
   }
  },
  "PatientServiceLogGroup4A5C3809": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/patient-service",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "PatientServiceA65AB800": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "PatientManagementEcsCluster3407F30E"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "EnableECSManagedTags": false,
    "LaunchType": "FARGATE",
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "PatientServiceSecurityGroup547BE1F2",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
       },
       {
        "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "PatientServicetaskFC8D0A76"
    }
   },
   "DependsOn": [
    "BillingServiceSecurityGroup3783AD35",
    "BillingServiceFEB36D90",
    "MskCluster",
    "PatientServiceDb4C436D31",
    "PatientServiceDbSecretAttachment54460532",
    "LocalStackPatientServiceDbSecretFF22185F3fdaad7efa858a3daf9490cf0a702aeb",
    "PatientServiceDbSecurityGroupCEB42CD9",
    "PatientServiceDbSubnetGroup1312FFB6",
    "PatientServiceDbHealthCheck",
    "PatientServicetaskTaskRole034A56CF"
   ]
  },
  "PatientServiceSecurityGroup547BE1F2": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "LocalStack/PatientService/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   },
   "DependsOn": [
    "BillingServiceSecurityGroup3783AD35",
    "BillingServiceFEB36D90",
    "MskCluster",
    "PatientServiceDb4C436D31",
    "PatientServiceDbSecretAttachment54460532",
    "LocalStackPatientServiceDbSecretFF22185F3fdaad7efa858a3daf9490cf0a702aeb",
    "PatientServiceDbSecurityGroupCEB42CD9",
    "PatientServiceDbSubnetGroup1312FFB6",
    "PatientServiceDbHealthCheck",
    "PatientServicetaskTaskRole034A56CF"
   ]
  },
  "ApiGatewayTaskDefinitionTaskRole78FC06E2": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "ApiGatewayTaskDefinitionBB9A2505": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Environment": [
       {
        "Name": "SPRING_PROFILES_ACTIVE",
        "Value": "prod"
       },
       {
        "Name": "AUTH_SERVICE_URL",
        "Value": "http://host.docker.internal:4005"
       }
      ],
      "Essential": true,
      "Image": "api-gateway",
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "ApiGatewayLogGroupA9770429"
        },
        "awslogs-stream-prefix": "api-gateway",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "ApiGatewayContainer",
      "PortMappings": [
       {
        "ContainerPort": 4004,
        "HostPort": 4004,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "ApiGatewayTaskDefinitionExecutionRoleE78CB745",
      "Arn"
     ]
    },
    "Family": "LocalStackApiGatewayTaskDefinitionA973AB2D",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "ApiGatewayTaskDefinitionTaskRole78FC06E2",
      "Arn"
     ]
    }
   }
  },
  "ApiGatewayTaskDefinitionExecutionRoleE78CB745": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   }
  },
  "ApiGatewayTaskDefinitionExecutionRoleDefaultPolicy3FBBB1F9": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "ApiGatewayLogGroupA9770429",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "ApiGatewayTaskDefinitionExecutionRoleDefaultPolicy3FBBB1F9",
    "Roles": [
     {
      "Ref": "ApiGatewayTaskDefinitionExecutionRoleE78CB745"
     }
    ]
   }
  },
  "ApiGatewayLogGroupA9770429": {
   "Type": "AWS::Logs::LogGroup",
   "Properties": {
    "LogGroupName": "/ecs/api-gateway",
    "RetentionInDays": 1
   },
   "UpdateReplacePolicy": "Delete",
   "DeletionPolicy": "Delete"
  },
  "APIGatewayServiceLBDA2B7609": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "APIGatewayServiceLBSecurityGroup8524BFD1",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "PatientManagementVpcPublicSubnet1Subnet32B9FD34"
     },
     {
      "Ref": "PatientManagementVpcPublicSubnet2Subnet301A18D3"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "PatientManagementVpcPublicSubnet1DefaultRouteCC8B87E7",
    "PatientManagementVpcPublicSubnet1RouteTableAssociationB803908F",
    "PatientManagementVpcPublicSubnet2DefaultRoute0DC44EBB",
    "PatientManagementVpcPublicSubnet2RouteTableAssociationC6F51BA2"
   ]
  },
  "APIGatewayServiceLBSecurityGroup8524BFD1": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB LocalStackAPIGatewayServiceLB8589C1A3",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "APIGatewayServiceLBSecurityGrouptoLocalStackAPIGatewayServiceSecurityGroupD9BADBA84004289C8DEC": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "APIGatewayServiceSecurityGroup98F3B93B",
      "GroupId"
     ]
    },
    "FromPort": 4004,
    "GroupId": {
     "Fn::GetAtt": [
      "APIGatewayServiceLBSecurityGroup8524BFD1",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "ToPort": 4004
   }
  },
  "APIGatewayServiceLBPublicListenerD6FA7F47": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "APIGatewayServiceLBDA2B7609"
    },
    "Port": 80,
    "Protocol": "HTTP"
   }
  },
  "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   }
  },
  "APIGatewayServiceA5206149": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "PatientManagementEcsCluster3407F30E"
    },
    "DeploymentConfiguration": {
     "Alarms": {
      "AlarmNames": [],
      "Enable": false,
      "Rollback": false
     },
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 1,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "ApiGatewayContainer",
      "ContainerPort": 4004,
      "TargetGroupArn": {
       "Ref": "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "APIGatewayServiceSecurityGroup98F3B93B",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "PatientManagementVpcPrivateSubnet1SubnetBDF7E702"
       },
       {
        "Ref": "PatientManagementVpcPrivateSubnet2Subnet58F4C9B9"
       }
      ]
     }
    },
    "ServiceName": "api-gateway",
    "TaskDefinition": {
     "Ref": "ApiGatewayTaskDefinitionBB9A2505"
    }
   },
   "DependsOn": [
    "APIGatewayServiceLBPublicListenerECSGroupF9D8CC70",
    "APIGatewayServiceLBPublicListenerD6FA7F47",
    "ApiGatewayTaskDefinitionTaskRole78FC06E2"
   ]
  },
  "APIGatewayServiceSecurityGroup98F3B93B": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "LocalStack/APIGatewayService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "PatientManagementVpcF1F9209A"
    }
   },
   "DependsOn": [
    "ApiGatewayTaskDefinitionTaskRole78FC06E2"
   ]
  },
  "APIGatewayServiceSecurityGroupfromLocalStackAPIGatewayServiceLBSecurityGroup6EE77D33400402B8DCE2": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "Description": "Load balancer to target",
    "FromPort": 4004,
    "GroupId": {
     "Fn::GetAtt": [
      "APIGatewayServiceSecurityGroup98F3B93B",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "APIGatewayServiceLBSecurityGroup8524BFD1",
      "GroupId"
     ]
    },
    "ToPort": 4004
   },
   "DependsOn": [
    "ApiGatewayTaskDefinitionTaskRole78FC06E2"
   ]
  }
 },
 "Outputs": {
  "APIGatewayServiceLoadBalancerDNS7C7318A3": {
   "Value": {
    "Fn::GetAtt": [
     "APIGatewayServiceLBDA2B7609",
     "DNSName"
    ]
   }
  },
  "APIGatewayServiceServiceURL95056890": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "APIGatewayServiceLBDA2B7609",
        "DNSName"
       ]
      }
     ]
    ]
   }
  }
 }
}
